--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>-->
             <div class="video-container" style="width: 100%; max-width: 500px; margin: 50px 50px; overflow: hidden;">
                 <video controls class="img-fluid rounded w-100 h-100" style="object-fit: cover;">
-                    <source src="images/BF1(2).mp4" type="video/mp4">
+                    <source src="https://drive.google.com/file/d/12JMFogsSe4QFLMEZH4R5dzrvy1YQBHYs/view?usp=drive_link" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
                 </video>
             </div>
